# tanban

./: Cargo.toml  README.md  justfile
schemas/: cusive-theme-toml-schema.json  starship-toml-schema.json
src/: main.rs  theme.toml
