[package]
name = "tanban"
version = "0.1.1"
edition = "2021"
authors = ["Fitzypop <fitzypop@pm.me>"]
license-file = "LICENSE"
description = "TUI Kanban Board"
repository = "https://github.com/fitzypop/tanban"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crossterm = "0.25.0"
tui = "0.19.0"
