[package]
name = "tanban"
version = "0.1.3"
edition = "2021"
authors = ["Fitzypop <fitzypop@pm.me>"]
license-file = "LICENSE"
description = "TUI Kanban Board"
repository = "https://github.com/fitzypop/tanban"
readme = "README.md"
keywords = ["tui", "kanban", "cursive"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", features = ["toml"] }
